Change api required properties
